--- a/global/less-variables/variables.less
+++ b/global/less-variables/variables.less
@@ -13,6 +13,7 @@
 @bg: #fafafa;
 @bg2: #eeeeee;
 @error: #ff0000;
+@hero: #FFEFBA;
 
 //text
 @font-black:'SimpleSansBlack', 'SimpleSans', Arial, Helvetica, sans-serif; 
